# inspirehep

./: .coveragerc  .drone.yml  .editorconfig  .flake8  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  .sentryclirc  .travis.yml  1.json  Brewfile  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  Dockerfile.dev  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  Tiltfile  Untitled.ipynb  angular-cli.json  build-and-deploy.sh  build-docker-backend-image.sh  build-docker-image.sh  build-docker-images.sh  build-docker-inspirehep-image.sh  build-docker-ui-image.sh  commit  cypress-tests-chrome.sh  cypress-tests-data.sh  cypress-tests-firefox.sh  cypress-tests-run-chrome.sh  cypress-tests-run-firefox.sh  cypress-tests-run.sh  cypress-tests-setup.sh  cypress-tests.sh  deploy-inspirehep.sh  (+34 more)
backend/: .test_durations  Dockerfile  Dockerfile-deps  Dockerfile-local  Dockerfile_local  celerybeat-schedule.db  demofile.txt  gunicorn_config.py  pyproject.toml  pytest.ini  run-code-checks.sh  run-tests.sh  setup.cfg  setup.py
backend/inspirehep/: __init__.py  access_control.py  celery.py  cli.py  config.py  errors.py  factory.py  fixtures.py  serializers.py  utils.py  version.py  views.py  wsgi.py
backend/inspirehep/accounts/: __init__.py  api.py  cli.py  config.py  decorators.py  fixtures.py  handlers.py  roles.py  views.py
backend/inspirehep/alembic/: 00e051bc08b2_drop_cds_table.py  020b99d0beb7_add_index_to_records_authors_table.py  0605ca08eebd_add_primary_key_for_degree_for_.py  0ae62076ae0c_add_workflow_record_sources_table.py  0d1cf7c4501e_add_journal_literature_table.py  232af38d2604_add_students_advisors_table.py  2d7ea622feda_add_index_to_authors_records.py  318758a589d5_modify_idx_object_index_in_pidstore_pid_.py  35ba3d715114_update_primary_key_in_students_advisors.py  3637cb5551a8_update_values_in_authorschematype.py  3fd6471bb960_remove_legacy_records_mirror_table.py  412aeb064d68_add_cdsrun_status_model.py  41e81f8ee63a_alter_records_authors_id_to_big_int.py  42a5817ca169_remove_records_bucket_entries_to_.py  49a436a179ac_add_inspire_redirection_table.py  503b34c08b0b_data_collection_citations.py  595c36d68964_add_authors_to_records_table_and_update_.py  5a0e2405b624_add_citation_type_to_citation_table.py  5ce9ef759ace_add_lecacy_records_mirror_table.py  63a6686e24c4_add_citation_type_to_citation_table.py  72d010d89702_update_constraints_in_records_authors.py  788a3a61a635_remove_pid_provider_index_from_pidstore.py  7be4c8b5c5e8_inspirehep_new_migrations.py  8ba47044154a_add_indexed_to_records_citations_on_is_.py  96c6e27080af_add_author_highlights_table.py  afe5f484abcc_add_experiments_literature_table.py  b0cdab232269_add_index_to_pid_value_in_pidstore.py  b495825c322b_add_recid_to_recordsauthors_id_type.py  b5be5fda2ee7_clean_state_for_inspirehep_tables.py  c6570e49b7b2_change_record_citations_to_records_.py  c9f31d2a189d_init_oai.py  cea5fa2e5d2c_add_institution_literature_table.py  dc1ae5abe9d6_add_index_to_pid_provider_in_pidstore.py  e5e43ad8f861_add_index_for_objectversion_key.py  f17cf574eb8b_add_primary_key_to_studentsadvisors_.py  f563233434cd_add_conference_literature_table.py
backend/inspirehep/assign/: tasks.py  utils.py  views.py
backend/inspirehep/cds/: __init__.py  api.py  cli.py  config.py  errors.py  models.py
backend/inspirehep/countries/: __init__.py  api.py  cli.py  proxies.py
backend/inspirehep/curation/: __init__.py  api.py  cli.py  errors.py  tasks.py  utils.py  views.py
backend/inspirehep/disambiguation/: api.py  cli.py  loaders.py  tasks.py  utils.py  views.py
backend/inspirehep/editor/: __init__.py  authorlist_utils.py  config.py  editor_soft_lock.py  errors.py  views.py
backend/inspirehep/files/: __init__.py  cli.py  config.py  ext.py  proxies.py
backend/inspirehep/hal/: __init__.py  api.py  config.py  errors.py  tasks.py  utils.py  views.py
backend/inspirehep/hepdata/: cli.py
backend/inspirehep/indexer/: api.py  base.py  cli.py  tasks.py  utils.py
backend/inspirehep/legacy/: views.py
backend/inspirehep/logger/: __init__.py  config.py  ext.py
backend/inspirehep/mailing/: __init__.py  cli.py  config.py  errors.py  ext.py  loaders.py  utils.py  views.py
backend/inspirehep/matcher/: api.py  cli.py  config.py  parsers.py  serializers.py  tasks.py  utils.py  validators.py  views.py
backend/inspirehep/migrator/: __init__.py  api.py  cli.py  config.py  tasks.py  utils.py  views.py
backend/inspirehep/oai/: builder.py  config.py  converter.py  serializers.py  utils.py
backend/inspirehep/orcid/: __init__.py  api.py  builder.py  cache.py  cli.py  config.py  converter.py  domain_models.py  exceptions.py  ext.py  push_access_tokens.py  putcode_getter.py  tasks.py  utils.py
backend/inspirehep/osti/: api.py  builder.py  config.py  tasks.py
backend/inspirehep/pidstore/: cli.py  converters.py  errors.py  models.py  resolvers.py
backend/inspirehep/records/: __init__.py  cli.py  config.py  date_utils.py  errors.py  ext.py  links.py  models.py  receivers.py  tasks.py  utils.py  views.py
backend/inspirehep/refextract/: utils.py  views.py
backend/inspirehep/rt/: __init__.py  errors.py  ext.py  tickets.py
backend/inspirehep/search/: __init__.py  aggregations.py  api.py  config.py  errors.py  facets.py  serializers.py  utils.py  views.py
backend/inspirehep/search_engines/: cli.py  config.py  render.py  sitemap.py  tasks.py  utils.py
backend/inspirehep/sitemap/: cli.py  collections.py  config.py  sitemap.py  tasks.py  utils.py  views.py
backend/inspirehep/snow/: __init__.py  api.py  config.py  errors.py  utils.py  views.py
backend/inspirehep/submissions/: errors.py  loaders.py  serializers.py  tasks.py  utils.py  views.py
backend/inspirehep/tools/: errors.py  utils.py  views.py
backend/scripts/: bootstrap  console  server  setup
backend/tests/: conftest.py
backend/tests/helpers/: cleanups.py  compare.py  utils.py
backend/tests/integration/: conftest.py  test_celery.py  test_factory.py  test_serializers.py  test_views.py
backend/tests/integration-async/: conftest.py  test_test_utils.py
(+6013 files in other folders)
