[tool.poetry]
name = "inspirehep"
version = "0.1.19"
description = "NSPIRE is the leading information platform for High Energy Physics (HEP) literature which provides users with high quality, curated content covering the entire corpus of HEP literature and the fulltext of all such articles that are Open Access."
authors = ["CERN <admin@inspirehep.net>"]
license = "MIT License"

[tool.poetry.dependencies]
celery = "==4.4.2"
# Click in version 7 have broken progressbar in python 3
# waiting for this PR to be merged https://github.com/pallets/click/pull/1163
click = "<7.0.0"
elasticsearch = "<7.2.0"
Flask = ">=1.0.2"
werkzeug  = ">=0.16.1,<1.0.0"
msgpack = "==0.6.2"

python = ">=3.6,<3.8"
inspire-schemas = "~=61.3"
inspire-utils = "^3.0.12"
inspire-service-orcid = {git = "https://github.com/inspirehep/inspire-service-orcid.git"}
inspire-json-merger = "^11.0"

invenio-access= "==1.1.0"
invenio-accounts = {git = "https://github.com/inspirehep/invenio-accounts.git", rev = "rest-api"}
invenio-app= "==1.2.3"
invenio-base= "==1.2.2"
invenio-cache= "==1.0.0"
invenio-celery = "1.1.2"
invenio-config= "==1.0.2"
invenio-db = {version = "==1.0.4", extras = [ "postgresql", "versioning"]}
invenio-i18n = "==1.2.0"
invenio-indexer = "==1.1.1"
invenio-jsonschemas = "==1.0.1"
invenio-mail = "==1.0.2"
invenio-oauth2server= "==1.0.4"
invenio-oauthclient= {git = "https://github.com/inspirehep/invenio-oauthclient.git", branch="rest-api"}
invenio-pidstore= "==1.2.0"
invenio-records = "==1.3.2"
invenio-records-rest= "==1.6.4"
invenio-rest= "==1.1.3"
invenio-search = {version = "==1.2.3", extras = [ "elasticsearch7",]}
timeexecution = "<4.0"
marshmallow = "<3.0.0"
flask-shell-ipython = "~=0.3,>=0.3.0"
flask-sqlalchemy = {git = "https://github.com/inspirehep/flask-sqlalchemy.git"}
orcid = "==1.0.3"

node-semver = "<0.2.0,>=0.1.1"
pybtex = "*"
cryptography = "<2.6"
flask-kvsession = {git = "https://github.com/inspirehep/flask-kvsession.git"}
python-redis-lock = "^3.3"
lxml = "~=4.4"
fqn-decorators = "~=1.2,>=1.2.3"
editdistance = "^0.5.3"
munkres = "^1.0"
rt = "^1.0"
gunicorn = "^19.0.0"
sentry-sdk = {version = "^0.10.2",extras = ["flask"]}
prometheus-flask-exporter = "0.14.1"
beard = ">=0.2.0"
numpy = ">=1.17.0"
structlog = "^19.2"
colorama = "^0.4.1"
structlog-sentry = "^1.1"
humanize = "^0.5.1"
feedgen = "^0.8.0"
flask-mail = "^0.9.1"
hepcrawl = "^13.0.7"
prometheus_client = "^0.7.1"
inspire-dojson = "^63.0"
boto3 = "^1.11.5"
python-magic = "^0.4.15"
inspire-query-parser = "^6.0.6"
deepdiff = "^4.3.2"
xmltodict = "^0.12.0"
inspire-matcher = "9.0.4"


[tool.poetry.dev-dependencies]
freezegun = "*"
coverage = ">=4.4.1"
isort = ">=4.3"
mock = ">=3.0.0,<4.0.0"
pydocstyle = ">=2.0.0"
pytest = ">=3.3.1,<4.0.0"
pytest-cov = "==2.6.1"
pytest-invenio = ">=1.2.0,<1.3.0"
pytest-mock = ">=1.6.0"
pytest-random-order = ">=0.5.4"
pytest-datadir = "*"
pytest-runner = ">=3.0.0,<5"
remote-pdb = "*"
black = "==18.9b0"
factory_boy = "~=2.11.1,>=2.11.1"
requests-mock = "~=1.5.2,>=1.5.2"
pytest-vcr = "~=1.0.2"
pre-commit = "*"
pylint = "*"
flake8 = "*"
watchdog = "*"
virtualenv = "<16.5.0"
ipdb = "^0.12.0"
vcrpy = "^2.1.0"
web-pdb = "^1.5"
moto = "^1.3.14"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
