[tool.poetry]
name = "inspirehep"
version = "0.1.19"
description = "INSPIRE is a trusted community hub that helps researchers to share and find accurate scholarly information in high energy physics."
authors = ["CERN <admin@inspirehep.net>"]
license = "MIT License"
homepage = "https://inspirehep.net"
repository = "https://github.com/inspirehep/inspirehep"
classifiers=[
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
celery = "~=4.4.7"
# Click in version 7 have broken progressbar in python 3
# waiting for this PR to be merged https://github.com/pallets/click/pull/1163
click = "<7.0.0"
elasticsearch = "<7.2.0"
Flask = ">=1.0.2"
werkzeug = "<2.0.0"
msgpack = "==0.6.2"

python = ">=3.8,<3.9"
inspire-schemas = "~=61.3"
inspire-utils = "~=3.0.19"
inspire-service-orcid = {git = "https://github.com/inspirehep/inspire-service-orcid.git", rev = "362425d6f77a4770794615d3b98c233fca08e537"}
inspire-json-merger = "^11.0"

invenio-access= "==1.1.0"
invenio-accounts = {git = "https://github.com/inspirehep/invenio-accounts.git", rev = "rest-api"}
invenio-app= "==1.2.3"
invenio-base= "==1.2.2"
invenio-cache= "==1.0.0"
invenio-celery = "1.1.2"
invenio-config= "==1.0.2"
invenio-db = {version = "==1.0.4", extras = [ "postgresql", "versioning"]}
invenio-i18n = "==1.2.0"
invenio-indexer = "==1.1.1"
invenio-jsonschemas = "==1.0.1"
invenio-mail = "==1.0.2"
invenio-oauth2server= "==1.0.4"
invenio-oauthclient= {git = "https://github.com/inspirehep/invenio-oauthclient.git", branch="rest-api"}
invenio-pidstore= "==1.2.0"
invenio-records = "==1.3.2"
invenio-rest= "==1.1.3"
invenio-search = {version = "==1.2.3", extras = [ "elasticsearch7",]}
timeexecution = "<4.0"
marshmallow = "<3.0.0"
flask-shell-ipython = "~=0.3,>=0.3.0"
flask-sqlalchemy = {git = "https://github.com/inspirehep/flask-sqlalchemy.git"}
orcid = "==1.0.3"

node-semver = "<0.2.0,>=0.1.1"
pybtex = "*"
cryptography = "<2.6"
flask-kvsession = {git = "https://github.com/inspirehep/flask-kvsession.git"}
python-redis-lock = "^3.3"
lxml = "~=4.4"
fqn-decorators = "~=1.2,>=1.2.3"
editdistance = "^0.5.3"
munkres = "^1.0"
rt = "^1.0"
gunicorn = "^19.0.0"
sentry-sdk = {version = "^0.10.2",extras = ["flask"]}
prometheus-flask-exporter = "0.14.1"
beard = ">=0.2.0"
numpy = ">=1.17.0"
structlog = "^19.2"
colorama = "^0.4.1"
structlog-sentry = "^1.1"
humanize = "^0.5.1"
feedgen = "^0.9.0"
flask-mail = "^0.9.1"
hepcrawl = "13.0.31"
prometheus_client = "^0.7.1"
inspire-dojson = "^63.1.0"
boto3 = "^1.11.5"
python-magic = "^0.4.15"
inspire-query-parser = "^6.0.6"
deepdiff = "^4.3.2"
xmltodict = "^0.12.0"
inspire-matcher = "^9.0.5"
pylatexenc = "^2.8"
pypdf2 = "^1.26.0"
refextract = "^1.0.3"
fs = "0.5.4"
invenio-oaiserver = {git = "https://github.com/inspirehep/invenio-oaiserver.git", rev = "5d796cf354467773a7e00b75bc382ba2bf2efef7"}
invenio-records-rest = {git = "https://github.com/inspirehep/invenio-records-rest", rev = "d79c5f6ed05560f423c6cb0390c7b33224c7883f"}
orjson = "^3.4.6"
sword2 = {git = "https://github.com/inspirehep/python-client-sword2.git", rev = "python3"}
sqlalchemy-continuum = {git = "https://github.com/inspirehep/sqlalchemy-continuum.git", rev = "d94d431"}
"zope.interface" = "~=5.4.0"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
freezegun = "*"
coverage = {version = "^5.0.3", extras = ["toml"]}
isort = "^5.6.4"
mock = ">=3.0.0,<4.0.0"
pydocstyle = ">=2.0.0"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-invenio = ">=1.2.0,<1.3.0"
pytest-mock = ">=1.6.0"
pytest-random-order = ">=0.5.4"
pytest-datadir = "*"
remote-pdb = "*"
black = "==18.9b0"
factory_boy = "~=2.11.1,>=2.11.1"
requests-mock = "~=1.5.2,>=1.5.2"
pytest-vcr = "~=1.0.2"
pre-commit = "*"
pylint = "*"
flake8 = "*"
watchdog = "*"
virtualenv = "<16.5.0"
ipdb = "^0.12.0"
vcrpy = "^2.1.0"
web-pdb = "^1.5"
moto = "^1.3.14"
pytest-testmon = "^1.0.3"
pytest-github-actions-annotate-failures = {git = "https://github.com/michamos/pytest-github-actions-annotate-failures.git"}
pytest-split = "^0.2.1"

[tool.poetry.scripts]
inspirehep = "inspirehep.cli:cli"

[tool.poetry.plugins."invenio_db.alembic"]
inspirehep = "inspirehep:alembic"

[tool.poetry.plugins."invenio_pidstore.minters"]
literature_minter = "inspirehep.pidstore.minters.control_number:LiteratureMinter.mint"
authors_minter = "inspirehep.pidstore.minters.control_number:AuthorsMinter.mint"
jobs_minter = "inspirehep.pidstore.minters.control_number:JobsMinter.mint"
journals_minter = "inspirehep.pidstore.minters.control_number:JournalsMinter.mint"
experiments_minter = "inspirehep.pidstore.minters.control_number:ExperimentsMinter.mint"
conferences_minter = "inspirehep.pidstore.minters.control_number:ConferencesMinter.mint"
data_minter = "inspirehep.pidstore.minters.control_number:DataMinter.mint"
institutions_minter = "inspirehep.pidstore.minters.control_number:InstitutionsMinter.mint"
seminars_minter = "inspirehep.pidstore.minters.control_number:SeminarsMinter.mint"

[tool.poetry.plugins."invenio_base.api_blueprints"]
inspirehep = "inspirehep.views:blueprint"
inspirehep_mailing = "inspirehep.mailing.views:blueprint"
inspirehep_migrator = "inspirehep.migrator.views:blueprint"
inspirehep_records = "inspirehep.records.views:blueprint"
inspirehep_search = "inspirehep.search.views:blueprint"
inspirehep_sitemap = "inspirehep.sitemap.views:blueprint"
inspirehep_rt = "inspirehep.rt.views:blueprint"
inspirehep_submissions = "inspirehep.submissions.views:blueprint"
inspirehep_disambiguation = "inspirehep.disambiguation.views:blueprint"
inspirehep_accounts = "inspirehep.accounts.views:blueprint"
inspirehep_legacy = "inspirehep.legacy.views:blueprint"
inspirehep_editor = "inspirehep.editor.views:blueprint"
inspirehep_tools = "inspirehep.tools.views:blueprint"
inspirehep_assign = "inspirehep.assign.views:blueprint"
inspirehep_matcher = "inspirehep.matcher.views:blueprint"
invenio_oaiserver = "invenio_oaiserver.views.server:blueprint"
inspirehep_curation = "inspirehep.curation.views:blueprint"
inspirehep_hal = "inspirehep.hal.views:blueprint"

[tool.poetry.plugins."invenio_config.module"]
inspirehep = "inspirehep.config"
inspirehep_accounts = "inspirehep.accounts.config"
inspirehep_editor = "inspirehep.editor.config"
inspirehep_files = "inspirehep.files.config"
inspirehep_logger = "inspirehep.logger.config"
inspirehep_mailing = "inspirehep.mailing.config"
inspirehep_matcher = "inspirehep.matcher.config"
inspirehep_migrator = "inspirehep.migrator.config"
inspirehep_oai = "inspirehep.oai.config"
inspirehep_orcid = "inspirehep.orcid.config"
inspirehep_records = "inspirehep.records.config"
inspirehep_rt = "inspirehep.rt.config"
inspirehep_search = "inspirehep.search.config"
inspirehep_sitemap = "inspirehep.sitemap.config"
inspirehep_hal = "inspirehep.hal.config"
inspirehep_cds = "inspirehep.cds.config"

[tool.poetry.plugins."invenio_base.api_apps"]
inspirehep_logger = "inspirehep.logger:InspireLogger"
inspirehep_mailing = "inspirehep.mailing:InspireMailing"
inspirehep_migrator = "inspirehep.migrator:InspireMigrator"
inspirehep_orcid = "inspirehep.orcid:InspireOrcid"
inspirehep_records = "inspirehep.records:InspireRecords"
inspirehep_rt = "inspirehep.rt:InspireRtExt"
inspirehep_s3 = "inspirehep.files:InspireS3"

[tool.poetry.plugins."invenio_base.api_converters"]
doipath = "inspirehep.pidstore.converters:DOIPathConverter"
arxivpath = "inspirehep.pidstore.converters:ArXivPathConverter"
inspirepid = "inspirehep.pidstore.converters:InspirePIDConverter"

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
inspirehep_records_schemas = "inspire_schemas"

[tool.poetry.plugins."invenio_search.mappings"]
records = "inspirehep.search.mappings"

[tool.poetry.plugins."invenio_db.models"]
inspirehep_records = "inspirehep.records.models"
inspirehep_migrator = "inspirehep.migrator.models"
inspirehep_cds = "inspirehep.cds.models"

[tool.poetry.plugins."invenio_celery.tasks"]
inspirehep_indexer = "inspirehep.indexer.tasks"
inspirehep_migrator = "inspirehep.migrator.tasks"
inspirehep_orcid = "inspirehep.orcid.tasks"
inspirehep_submissions = "inspirehep.submissions.tasks"
inspirehep_matcher = "inspirehep.matcher.tasks"
inspirehep_disambiguation = "inspirehep.disambiguation.tasks"
inspirehep_hal = "inspirehep.hal.tasks"
inspirehep_cds = "inspirehep.cds.tasks"

[tool.isort]
profile = "black"
multi_line_output = 3
atomic = true
skip = "ui"

[tool.coverage.run]
omit = ["inspirehep/accounts/handlers.py",]

[tool.pytest.ini_options]
addopts = "--random-order --cov=inspirehep --cov-report=term-missing -p no:warnings"
testpaths = "tests"
norecursedirs = "tests/integration/orcid/helpers"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
